  since toolbox relates to tools associated with the current page, not the
  site. To support the transition, for interface admins who have already
  customized MediaWiki:Sidebar, the special pages link will be automatically
  added. This will be hard deprecated in the next MediaWiki release. More
  information is available at T333211. To avoid future breakage, see the
  guidance in T385346.
* BlockUtils and BlockUtilsFactory is now deprecated. Use BlockTargetFactory
  and CrossWikiBlockTargetFactory.
* RenameuserSQL::rename has been deprecated and should be replaced with
  RenameuserSQL::renameUser, which returns a Status instead of boolean.
* LocalFile::getQueryInfo() and OldLocalFile::getQueryInfo(), deprecated
  since 1.41, are now emitting warnings.
* Linker::userLink() has been deprecated in favor of the UserLinkRenderer
  service. (T308000)
* The 'PermissionErrorAudit' hook has been deprecated and replaced by
  the 'PermissionStatusAudit' hook.
* MessageCache::parse, ::parseWithPostProcessing and ::transform() are now
  deprecated. Use MessageParser.
* User::getGlobalBlock(), deprecated since 1.40, now emits deprecation
  warnings.
* MediaWikiTitleCodec::getTitleInvalidRegex() is now deprecated. Use the same
  method in TitleParser.
* …

=== Other changes in 1.44 ===
* The ArticleProtect and ArticleProtectComplete hooks are now called when
  WikiPage::doUpdateRestrictions is called to protect a non-existing
  title.
* Introduce ISearchResultSet::isApproximateTotalHits() (defaults to false
  in BaseSearchResultSet) to let SearchEngine implementations run optimizations
  that might lead to innacurate computation of the exact number of pages
  matching the search query.
* (T367441) ResourceLoader Debug mode now defaults to debug mode v2. This means
  ?debug=true now maps to debug=2. Unlike debug mode v1, this doesn't load each
  file from disk, and your code looks the same as it is in production with
  closures that prevent global variable leakage.
* …
